change implement the interface to the new class library that handle the CRUD from mango DB

--- a/BlazorInventor/Component/AddMaterialsComponent.razor
+++ b/BlazorInventor/Component/AddMaterialsComponent.razor
@@ -3,7 +3,7 @@
 
 @inject IMaterialsData materialsData
 *@
-@inject IDataBase<MaterialsModel> materialsData
+@inject IDataAccessLibrary<MaterialsModel> materialsData
 
 
 
