--- a/BlazorInventor/Component/AddWagenComponent.razor
+++ b/BlazorInventor/Component/AddWagenComponent.razor
@@ -3,7 +3,7 @@
 @inject ISingleWagenData singleWagen
 
 *@
-@inject IDataBase<SingleWagenModel> singleWagen
+@inject IDataAccessLibrary<SingleWagenModel> singleWagen
 
 <h3>Add Wagens</h3>
 
