--- a/BlazorInventor/Pages/Bands Pages/AddBands.razor
+++ b/BlazorInventor/Pages/Bands Pages/AddBands.razor
@@ -1,7 +1,7 @@
 ﻿@page "/AddBands"
 
-@inject IDataBase<BandsModel> _bandData
-@inject IDataBase<SingleWagenModel> _singleWagen
+@inject IDataAccessLibrary<BandsModel> _bandData
+@inject IDataAccessLibrary<SingleWagenModel> _singleWagen
 
 
 <h3>New Band</h3>
