--- a/BlazorInventor/Pages/Bands Pages/BandDetail.razor
+++ b/BlazorInventor/Pages/Bands Pages/BandDetail.razor
@@ -1,5 +1,5 @@
 ﻿@page "/BandDetail/{Id}"
-@inject IDataBase<BandsModel> _bandData
+@inject IDataAccessLibrary<BandsModel> _bandData
 
 <h3>@bandDetail.Number Details</h3>
 <div class="container mb-3">
