--- a/BlazorInventor/Pages/Bands Pages/UpdateBand.razor
+++ b/BlazorInventor/Pages/Bands Pages/UpdateBand.razor
@@ -1,5 +1,5 @@
 ﻿@page "/updateBand"
-@inject IDataBase<BandsModel> _bandsData
+@inject IDataAccessLibrary<BandsModel> _bandsData
 @inject NavigationManager navManager
 
 
