--- a/BlazorInventor/Pages/Controllers/AddController.razor
+++ b/BlazorInventor/Pages/Controllers/AddController.razor
@@ -1,6 +1,6 @@
 ﻿@page "/AddController"
 
-@inject IDataBase<ControllerModel> _controllerData
+@inject IDataAccessLibrary<ControllerModel> _controllerData
 @inject NavigationManager navManager
 
 <div class="container">
