--- a/BlazorInventor/Pages/Controllers/UpdateController.razor
+++ b/BlazorInventor/Pages/Controllers/UpdateController.razor
@@ -1,6 +1,6 @@
 ﻿@page "/UpdateController"
 
-@inject IDataBase<ControllerModel> _controllerData
+@inject IDataAccessLibrary<ControllerModel> _controllerData
 @inject NavigationManager navManager
 
 
