--- a/BlazorInventor/Pages/Inventor Pages/InventorIndex.razor
+++ b/BlazorInventor/Pages/Inventor Pages/InventorIndex.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Inventor"
-@inject IDataBase<ControllerModel> controllerData
-@inject IDataBase<BandsModel> bandData
-@inject IDataBase<InventorControllers> inventorControllers
+@inject IDataAccessLibrary<ControllerModel> controllerData
+@inject IDataAccessLibrary<BandsModel> bandData
+@inject IDataAccessLibrary<InventorControllers> inventorControllers
 
 @*
 
