--- a/BlazorInventor/Pages/Materila Pages/AddMaterials.razor
+++ b/BlazorInventor/Pages/Materila Pages/AddMaterials.razor
@@ -1,6 +1,6 @@
 ﻿@page "/AddMaterials"
 
-@inject IDataBase<MaterialsModel> _materialsData
+@inject IDataAccessLibrary<MaterialsModel> _materialsData
 @inject IConfiguration config
 
 
