--- a/BlazorInventor/Pages/Materila Pages/UpdateMaterial.razor
+++ b/BlazorInventor/Pages/Materila Pages/UpdateMaterial.razor
@@ -1,6 +1,6 @@
 ﻿@page "/updateMaterila"
 
-@inject IDataBase<MaterialsModel> _materialsData
+@inject IDataAccessLibrary<MaterialsModel> _materialsData
 @inject NavigationManager navManager
 
 
