--- a/BlazorInventor/Pages/Wagens Pages/AddWagen.razor
+++ b/BlazorInventor/Pages/Wagens Pages/AddWagen.razor
@@ -1,7 +1,7 @@
 ﻿@page "/AddWagen"
 
-@inject IDataBase<SingleWagenModel> _singleWagen
-@inject IDataBase<MaterialsModel> _materialsData
+@inject IDataAccessLibrary<SingleWagenModel> _singleWagen
+@inject IDataAccessLibrary<MaterialsModel> _materialsData
 
 <h3>AddWagen</h3>
 
