--- a/BlazorInventor/Pages/Wagens Pages/UpdateWagen.razor
+++ b/BlazorInventor/Pages/Wagens Pages/UpdateWagen.razor
@@ -1,6 +1,6 @@
 ﻿@page "/updateWagen"
 
-@inject IDataBase<SingleWagenModel> _singleWagen
+@inject IDataAccessLibrary<SingleWagenModel> _singleWagen
 @inject NavigationManager navManager
 
 <div class="container">
