--- a/BlazorInventor/Pages/Wagens Pages/WagenDetails.razor
+++ b/BlazorInventor/Pages/Wagens Pages/WagenDetails.razor
@@ -1,6 +1,6 @@
 ﻿@page "/WagenDetail/{Id}"
 
-@inject IDataBase<SingleWagenModel> _wagenData
+@inject IDataAccessLibrary<SingleWagenModel> _wagenData
 <h3>@wagenDetails.Name Details</h3>
 
 
