add new import to new class library

--- a/BlazorInventor/_Imports.razor
+++ b/BlazorInventor/_Imports.razor
@@ -11,12 +11,6 @@
 @using BlazorInventor.Model;
 @using BlazorInventor.Component
 
-@using DBInventorLibrary.DataAccess.Bands;
-@using DBInventorLibrary.DataAccess.InventorData;
-@using DBInventorLibrary.DataAccess.Materials;
-@using DBInventorLibrary.DataAccess.Wagens;
-@using DBInventorLibrary.DataAccess.Controllers;
-@using DBInventorLibrary.DataAccess.InventorData.InventorMaterials
 
 @using DBInventorLibrary.Models;
 @using DBInventorLibrary.Models.MaterialsModels;
@@ -25,4 +19,4 @@
 @using DBInventorLibrary.Models.ControllerModels
 @using DBInventorLibrary.Models.Inventor
 
-@using DBInventorLibrary.DataAccessAbstract.Services;
+@using MongoDBConnectionClassLibrary.Data_Services
