--- a/BlazorInventor/Component/AddWagenComponent.razor
+++ b/BlazorInventor/Component/AddWagenComponent.razor
@@ -1,9 +1,4 @@
-﻿
-@*
-@inject ISingleWagenData singleWagen
-
-*@
-@inject IDataAccessLibrary<SingleWagenModel> singleWagen
+﻿@inject IDataAccessLibrary<SingleWagenModel> singleWagen
 
 <h3>Add Wagens</h3>
 
